packages/isar_community_generator/test/errors/class/constructor_named.dart
// unnamed constructor

import 'package:isar_community/isar.dart';

@collection
class Model {
  Model.create();

  Id? id;
}
